aws integration and premium restrictions to packman success

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ orjson==3.10.6
 packaging==24.1
 pydantic==2.8.2
 pydantic_core==2.20.1
+pypdf==5.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.1
