--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ packaging==24.1
 pydantic==2.8.2
 pydantic_core==2.20.1
 pypdf==5.0.0
+PyPDF2 3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.1
